@@ -21,10 +21,10 @@ import com.google.common.collect.ImmutableMap;
 import com.vaadin.flow.component.AbstractField;
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.combobox.ComboBox;
-import com.vaadin.flow.component.datepicker.DatePicker;
 import io.jmix.core.JmixOrder;
 import io.jmix.core.Messages;
 import io.jmix.core.Metadata;
+import io.jmix.core.metamodel.datatype.DatatypeRegistry;
 import io.jmix.core.metamodel.datatype.FormatStringsRegistry;
 import io.jmix.core.metamodel.model.MetaClass;
 import io.jmix.core.metamodel.model.Range;
@@ -58,6 +58,7 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.util.Assert;
 
 import java.util.List;
+import java.util.Map;
 
 import static io.jmix.dynattr.AttributeType.ENTITY;
 
@@ -80,9 +81,11 @@ public class DynAttrPropertyFilterComponentGenerationStrategy extends DynAttrCom
                                                             Actions actions,
                                                             AttributeDependencies attributeDependencies,
                                                             FormatStringsRegistry formatStringsRegistry,
-                                                            ApplicationContext applicationContext) {
+                                                            ApplicationContext applicationContext,
+                                                            DatatypeRegistry datatypeRegistry) {
         super(messages, uiComponents, dynamicModelMetadata, metadata, msgBundleTools, optionsLoader,
-                attributeValidators, viewRegistry, actions, attributeDependencies, formatStringsRegistry, applicationContext);
+                attributeValidators, viewRegistry, actions, attributeDependencies,
+                formatStringsRegistry, applicationContext, datatypeRegistry);
     }
 
 
@@ -119,7 +122,7 @@ public class DynAttrPropertyFilterComponentGenerationStrategy extends DynAttrCom
         } else if (attribute.isCollection() || type == PropertyFilter.Operation.Type.LIST) {
             resultComponent = createCollectionField(context, attribute);
         } else if (attribute.getDataType() == ENTITY) {
-            resultComponent = createClassField(context, attribute);
+            resultComponent = createEntityField(context, attribute);
         } else if (type == PropertyFilter.Operation.Type.INTERVAL) {
             resultComponent = createIntervalField(context);
         } else {
@@ -137,7 +140,7 @@ public class DynAttrPropertyFilterComponentGenerationStrategy extends DynAttrCom
     protected AbstractField<?, ?> createUnaryField(@SuppressWarnings("unused") ComponentGenerationContext context) {
         //noinspection unchecked
         JmixComboBox<Boolean> component = uiComponents.create(JmixComboBox.class);
-        ComponentUtils.setItemsMap(component, ImmutableMap.of(
+        ComponentUtils.setItemsMap(component, Map.of(
                 Boolean.TRUE, messages.getMessage("boolean.yes"),
                 Boolean.FALSE, messages.getMessage("boolean.no")
         ));
